tests/good/example-11.rat
fn Fun () -> Int {
  return 10;
}

fn Main () -> Void {
  Println(ShowInt(Fun()));
  return;
}