tests/bad/example-e15.rat
fn BadArgs(x: Void) -> Void {
  return;
}

fn Main () -> Void {
  return;
}